# Source/Topica.Server/Topica.Server/Controllers/TopicsController.cs
@@ -23,19 +23,23 @@ namespace Events.Server.Controllers
         /// </summary>
         /// <returns></returns>
         [ProducesResponseType(StatusCodes.Status404NotFound)]
-        [ProducesResponseType<Topic>(StatusCodes.Status200OK)]
+        [ProducesResponseType<string[]>(StatusCodes.Status200OK)]
         [HttpGet(Name = nameof(GetTopics))]
-        public async Task<ActionResult<Topic>> GetTopics()
+        public async Task<ActionResult<string[]>> GetTopics()
         {
             return Ok(await Store.GetTopicsAsync());
         }
 
+        [ProducesResponseType(StatusCodes.Status404NotFound)]
+        [ProducesResponseType<int>(StatusCodes.Status200OK)]
         [HttpGet("Count", Name = nameof(GetCount))]
-        public async Task<ActionResult<Topic>> GetCount()
+        public async Task<ActionResult<int>> GetCount()
         {
             return Ok(await Store.GetTopicsCountAsync());
         }
 
+        [ProducesResponseType(StatusCodes.Status404NotFound)]
+        [ProducesResponseType<Topic>(StatusCodes.Status200OK)]
         [HttpGet("{topicId}", Name = nameof(GetTopic))]
         public async Task<ActionResult<Topic>> GetTopic(string topicId)
         {
@@ -56,7 +60,7 @@ namespace Events.Server.Controllers
         [ProducesResponseType<string>(StatusCodes.Status200OK)]
         [Authorize(Roles = "write")]
         [HttpPost(Name = nameof(AddMessage))]
-        public async Task<ActionResult> AddMessage(string? topicId, string message)
+        public async Task<ActionResult<string>> AddMessage(string? topicId, string message)
         {
             if (string.IsNullOrEmpty(topicId))
                 topicId = Guid.NewGuid().ToString();
@@ -66,18 +70,20 @@ namespace Events.Server.Controllers
             return Ok(topicId);
         }
 
+        [ProducesResponseType(StatusCodes.Status200OK)]
         [Authorize(Roles = "write")]
         [HttpDelete("{topicId}/messages/{messageId}", Name = nameof(DeleteMessage))]
-        public async Task<ActionResult<Topic>> DeleteMessage(string topicId, Guid messageId)
+        public async Task<ActionResult> DeleteMessage(string topicId, Guid messageId)
         {
             await Store.DeleteEntryAsync(topicId, messageId);
 
             return Ok();
         }
 
+        [ProducesResponseType(StatusCodes.Status200OK)]
         [Authorize(Roles = "write")]
         [HttpDelete("{topicId}", Name = nameof(DeleteTopic))]
-        public async Task<ActionResult<Topic>> DeleteTopic(string topicId)
+        public async Task<ActionResult> DeleteTopic(string topicId)
         {
             await Store.DeleteTopicAsync(topicId);
 
